// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package engula.master.v1;

message MemberId {
  uint64 id = 1;
}

message NodeDescriptor {
  optional uint64 id = 1;
  optional string addr = 2;
}

message LookupMemberRequest {
  repeated MemberId id = 1;
}

message LookupMemberResponse {
  repeated NodeDescriptor desc = 1;
}

message JoinMemberRequest {
  repeated NodeDescriptor desc = 1;
}

message JoinMemberResponse {
  repeated MemberId id = 1;
}

message LeaveMemberRequest {
  repeated MemberId id = 1;
}

message LeaveMemberResponse {
  repeated MemberId id = 1;
}

service Master {
  rpc LookupMember(LookupMemberRequest) returns (LookupMemberResponse) {}
  rpc JoinMember(JoinMemberRequest) returns (JoinMemberResponse) {}
  rpc LeaveMember(LeaveMemberRequest) returns (LeaveMemberResponse) {}
}
